Update global layout spacing to include the fixed header on mobile

--- a/app/assets/stylesheets/components/_layout.scss
+++ b/app/assets/stylesheets/components/_layout.scss
@@ -3,7 +3,6 @@ body {
   border-top: none;
   display: flex;
   flex-direction: column;
-  margin: 0 auto;
   min-height: 100vh;
   min-width: 320px;
 }
